# CurrencyFLTK

./: .gitignore  APICredentials.h  CMakeLists.txt  main.cpp
Functions/: AddSorted.h  GetCurrencyIndex.h  GetExchangeRates.h  SetDefaultCurrency.h  ValidateInput.h  WriteCallback.h
